# Lyceum-Auth-SDK

./: .gitignore  pyproject.toml
sesc_auth_sdk/: config.py  dependencies.py
sesc_auth_sdk/enums/: role.py
sesc_auth_sdk/schemas/: user.py
